fix overflow of small tables

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -123,14 +123,16 @@ table {
   padding-right: 1em;
 }
 
-.ox-hugo-table.full-width {
-  width: 100vw;
-  overflow-x: auto;
-  position: relative;
-  left: 50%;
-  margin-left: -50vw;
-  background: white;
-  padding: 2em;
+.ox-hugo-table {
+  overflow-x: scroll;
+  &.full-width {
+    width: 100vw;
+    position: relative;
+    left: 50%;
+    margin-left: -50vw;
+    background: white;
+    padding: 2em;
+  }
 }
 
 div.canvas {
